plugins {
    id 'java'
}

group 'org.bma.algorithms'
version '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)  // Specify Java 21
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation libs.logback.classic
    implementation libs.zookeeper
    implementation libs.commons.io
    implementation libs.java.tuples
    implementation libs.jackson.core
    implementation libs.jackson.databind
    implementation libs.jackson.annotations

    compileOnly("org.projectlombok:lombok:1.18.38")
    annotationProcessor("org.projectlombok:lombok:1.18.38")
    testCompileOnly("org.projectlombok:lombok:1.18.38")
    testAnnotationProcessor("org.projectlombok:lombok:1.18.38")

    testImplementation 'org.awaitility:awaitility:4.1.1'

    testImplementation libs.junit.jupiter.api
    testRuntimeOnly libs.junit.jupiter.engine
    testImplementation libs.junit.jupiter.params
    testImplementation libs.junit.pioneer
}

test {
    useJUnitPlatform()
}
